update artist Dashboard

--- a/Frontend/Spotify Clone/album.html
+++ b/Frontend/Spotify Clone/album.html
@@ -152,7 +152,11 @@
     <div class="main-container">
       <div class="topbar">
         <div class="prev-next-buttons">
-          <button type="button" class="fa fas fa-chevron-left"></button>
+          <button
+            type="button"
+            class="fa fas fa-chevron-left"
+            onclick="window.location.href='/index.html';"
+          ></button>
           <button type="button" class="fa fas fa-chevron-right"></button>
         </div>
 
@@ -203,7 +207,7 @@
                 <span class="fa fa-play" id="playicon"></span>
               </div>
               <!-- <i class="fa-regular fa-heart" id="hearticon"></i> -->
-              
+
               <i class="fa-solid fa-circle-plus" id="hearticon"></i>
 
               <i class="fa-solid fa-ellipsis" id="ellipsisicon"></i>
