--- a/Frontend/Spotify Clone/artistAfterlogin.html
+++ b/Frontend/Spotify Clone/artistAfterlogin.html
@@ -130,7 +130,11 @@
     <div class="main-container">
       <div class="topbar">
         <div class="prev-next-buttons">
-          <button type="button" class="fa fas fa-chevron-left"></button>
+          <button
+            type="button"
+            class="fa fas fa-chevron-left"
+            onclick="window.location.href='/index2.html';"
+          ></button>
           <button type="button" class="fa fas fa-chevron-right"></button>
         </div>
 
